add gitignore, api token
