# gate/api/user.go
@@ -1,30 +1,17 @@
 package api
 
 import (
+	"gate/models"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
 
-type accountReq struct {
-	Account  string `form:"account" json:"account" binding:"required,alphaunicode"`
-	Password string `form:"password" json:"password" binding:"required,number"`
+type UserLoginResponse struct {
+	AccessToken string `json:"accessToken"`
 }
 
-func (this *Server) Post(c *gin.Context) {
-	req := &accountReq{}
-
-	err := c.Bind(req)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"err": err.Error(),
-		})
-	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"method": c.Request.Method,
-		"path":   c.Request.URL.Path,
-		"data":   req,
-	})
+type GetUserRequest struct {
+	Id int64 `uri:"id" binding:"required,min=1"`
 }
 
 // GetById
@@ -32,12 +19,20 @@ func (this *Server) Post(c *gin.Context) {
 // @Tags 取得用戶
 // @Success 200 string json{"code","method","path","id"}
 // @Param	id	path	int64	true	"用戶id"
-// @Router /v1/user/:id [get]
+// @Router /v1/user/{id} [get]
 func (this *Server) GetUserById(c *gin.Context) {
-	id := c.Param("id")
-	c.JSON(http.StatusOK, gin.H{
-		"method": c.Request.Method,
-		"path":   c.Request.URL.Path,
-		"id":     id,
-	})
+	req := GetUserRequest{}
+
+	if err := c.ShouldBindUri(&req); err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+	}
+
+	model := models.UserInfo{}
+	userInfo, err := model.GetUserInfoById(req.Id)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, &userInfo)
 }
